src/test/ui/type-alias-impl-trait/generic_duplicate_param_use2.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use2.rs:11:27
   |
LL | fn one<T: Debug>(t: T) -> Two<T, T> {
   |                           ^^^^^^^^^
   |
note: type used multiple times
  --> $DIR/generic_duplicate_param_use2.rs:8:10
   |
LL | type Two<T, U> = impl Debug;
   |          ^  ^

error[E0277]: `T` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use2.rs:8:18
   |
LL | type Two<T, U> = impl Debug;
   |                  ^^^^^^^^^^ `T` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
help: consider restricting type parameter `T`
   |
LL | type Two<T: std::fmt::Debug, U> = impl Debug;
   |           +++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
